--- a/serenity-app/res/layout-large/activity_tvbrowser_show_posters.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_posters.xml
@@ -18,6 +18,8 @@
             android:background="@drawable/tvshows"
             android:orientation="vertical"
             tools:context=".ui.browser.tv.TVShowBrowserActivity" >
+            
+            <include layout="@layout/move_custom_actionbar"/>
 
             <LinearLayout
                 android:id="@+id/tvLine1"
@@ -25,17 +27,6 @@
                 android:layout_height="wrap_content"
                 android:background="#A0000000"
                 android:orientation="horizontal" >
-
-                <ImageButton
-                    android:id="@+id/menu_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="28dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@android:color/transparent"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="10dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/menudrawer_selector" />
 
                 <TextView
                     android:id="@+id/tvshow_CategoryName"
