Refactor TVShowBrowser to use ActionBar and DrawerLayout

--- a/serenity-app/res/values/colors.xml
+++ b/serenity-app/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="list_activated">#F0F0F0</color>
     <color name="orange">#FF6600</color>
     <color name="holo_color">#ff0099cc</color>
-    <color name="fity_percent_transparent">#80000000</color>   
+    <color name="fity_percent_transparent">#80000000</color>
+    <color name="card_background">#A0000000</color>   
     
 </resources>
