--- a/serenity-app/res/layout-large/tvshow_custom_actionbar.xml
+++ b/serenity-app/res/layout-large/tvshow_custom_actionbar.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/metaDataRow"
-    android:layout_width="fill_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tvLine1"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_centerHorizontal="true"
-    android:layout_marginRight="10dp"
     android:background="@color/card_background"
     android:orientation="horizontal" >
 
     <TextView
-        android:id="@+id/movieCategoryName"
+        android:id="@+id/tvshow_CategoryName"
         style="@android:style/TextAppearance.Holo.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:focusable="false"
         android:text="@string/category" />
 
@@ -40,34 +40,23 @@
         android:visibility="invisible" />
 
     <TextView
-        android:id="@+id/subtitleFilter"
-        style="@android:style/TextAppearance.Holo.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:focusable="false"
-        android:text="Subtitle"
-        android:visibility="gone" />
-
-    <Spinner
-        android:id="@+id/videoSubtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:background="@drawable/spinner_background"
-        android:focusable="true"
-        android:gravity="left"
-        android:prompt="@string/movie_category_prompt2"
-        android:spinnerMode="dropdown"
-        android:visibility="gone" />
-
-    <TextView
-        android:id="@+id/movieBrowserPosterTitle"
+        android:id="@+id/tvShowGridTitle"
         style="@android:style/TextAppearance.Holo.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvShowItemCount"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:gravity="right"
+        android:textColor="#F0F0F0"
+        android:textSize="20sp"
+        tools:ignore="SelectableText" >
+    </TextView>
 
 </LinearLayout>
