--- a/serenity-app/res/values/styles.xml
+++ b/serenity-app/res/values/styles.xml
@@ -20,6 +20,10 @@
         <item name="windowActionBarOverlay">true</item>
     </style>
     
+    <style name="Theme.AppCompat.NoActionBar" parent="@style/Theme.AppCompat">
+        <item name="android:windowNoTitle">true</item>
+  </style>
+    
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
