--- a/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_seasons.xml
@@ -1,104 +1,95 @@
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+<us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <us.nineworlds.serenity.widgets.DrawerLayout
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+    <!-- The main content view -->
 
-        <!-- The main content view -->
+    <RelativeLayout
+        xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
+        android:id="@+id/tvshowSeasonBrowserLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/tvshows" >
 
-        <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
-            android:id="@+id/tvshowSeasonBrowserLayout"
+        <com.jess.ui.TwoWayGridView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/episodeGridView"
             android:layout_width="fill_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/tvshows"
-            android:orientation="vertical"
-            tools:context=".ui.browser.tv.TVShowBrowserActivity" >
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/tvShowSeasonTitleRow"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_marginRight="10dp"
+            android:background="@color/card_background"
+            android:focusable="true"
+            android:nextFocusDown="@+id/tvShowSeasonImageGalleryLayout"
+            android:nextFocusLeft="@+id/tvShowSeasonImageGalleryLayout"
+            android:nextFocusRight="@+id/tvShowSeasonImageGalleryLayout"
+            android:visibility="gone"
+            app:cacheColorHint="#E8E8E8"
+            app:gravity="center"
+            app:horizontalSpacing="16dp"
+            app:numColumns="auto_fit"
+            app:numRows="2"
+            app:rowHeight="120dp"
+            app:scrollDirectionLandscape="horizontal"
+            app:scrollDirectionPortrait="vertical"
+            app:stretchMode="spacingWidthUniform" />
 
-            <include android:layout="@layout/season_custom_actionbar"/>
+        <LinearLayout
+            android:id="@+id/tvShowSeasonTitleRow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/tvShowSeasonImageGalleryLayout"
+            android:background="@color/card_background"
+            android:orientation="horizontal" >
 
-            <com.jess.ui.TwoWayGridView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/episodeGridView"
+            <TextView
+                android:id="@+id/tvShowSeasonsTitle"
+                style="@android:style/TextAppearance.Holo.Medium"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_above="@+id/tvShowSeasonTitleRow"
-                android:layout_below="@+id/metaDataRow"
-                android:layout_centerHorizontal="true"
-                android:layout_marginRight="10dp"
-                android:background="#A0000000"
-                android:focusable="true"
-                android:nextFocusDown="@+id/tvShowSeasonImageGalleryLayout"
-                android:nextFocusLeft="@+id/tvShowSeasonImageGalleryLayout"
-                android:nextFocusRight="@+id/tvShowSeasonImageGalleryLayout"
-                android:visibility="gone"
-                app:cacheColorHint="#E8E8E8"
-                app:gravity="center"
-                app:horizontalSpacing="16dp"
-                app:numColumns="auto_fit"
-                app:numRows="2"
-                app:rowHeight="120dp"
-                app:scrollDirectionLandscape="horizontal"
-                app:scrollDirectionPortrait="vertical"
-                app:stretchMode="spacingWidthUniform" />
+                android:gravity="center"
+                android:textColor="#F0F0F0"
+                tools:ignore="SelectableText" >
+            </TextView>
+        </LinearLayout>
 
-            <LinearLayout
-                android:id="@+id/tvShowSeasonTitleRow"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/tvShowSeasonImageGalleryLayout"
-                android:background="#A0000000"
-                android:orientation="horizontal" >
+        <LinearLayout
+            android:id="@+id/tvShowSeasonImageGalleryLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
+            android:background="@color/card_background"
+            android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/tvShowSeasonsTitle"
-                    style="@android:style/TextAppearance.Holo.Medium"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="#F0F0F0"
-                    tools:ignore="SelectableText" >
-                </TextView>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/tvShowSeasonImageGalleryLayout"
+            <Gallery
+                android:id="@+id/tvShowSeasonImageGallery"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="10dp"
-                android:background="#A0000000"
-                android:orientation="vertical" >
+                android:layout_gravity="center|center_vertical"
+                android:animationDuration="1"
+                android:padding="5dp"
+                android:spacing="25dp" >
 
-                <Gallery
-                    android:id="@+id/tvShowSeasonImageGallery"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center|center_vertical"
-                    android:animationDuration="1"
-                    android:padding="5dp"
-                    android:spacing="25dp" >
+                <requestFocus />
+            </Gallery>
+        </LinearLayout>
+    </RelativeLayout>
 
-                    <requestFocus />
-                </Gallery>
-            </LinearLayout>
-        </RelativeLayout>
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#111"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:focusableInTouchMode="true"
+        android:paddingTop="?android:attr/actionBarSize" />
 
-        <ListView
-            android:id="@+id/left_drawer"
-            android:layout_width="240dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="#111"
-            android:choiceMode="singleChoice"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
-            android:focusableInTouchMode="true"
-            android:paddingTop="?android:attr/actionBarSize" />
-    </us.nineworlds.serenity.widgets.DrawerLayout>
-
-</merge>
+</us.nineworlds.serenity.widgets.DrawerLayout>
