Issue #252: Fix crash on OUYA, fix overscan compensation.
There was a theming bug that the OUYA caught.  Also, fixed Overscan
compensation so that it correctly takes into account the decorView for the
Window, and adjust the actionbar size accordingly as well as the overall
window size.

--- a/serenity-app/res/layout-large/activity_plex_app_main.xml
+++ b/serenity-app/res/layout-large/activity_plex_app_main.xml
@@ -11,9 +11,7 @@
         <RelativeLayout
             android:id="@+id/mainLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            tools:context=".MainActivity" >
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/mainGalleryBackground"
