--- a/serenity-app/res/layout-large/tvshow_custom_actionbar.xml
+++ b/serenity-app/res/layout-large/tvshow_custom_actionbar.xml
@@ -13,6 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:gravity="center_vertical|left"
         android:focusable="false"
         android:text="@string/category" />
 
@@ -21,9 +22,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:background="@drawable/spinner_background"
         android:focusable="true"
-        android:gravity="left"
+        android:gravity="center_vertical|left"
         android:prompt="@string/movie_category_prompt"
         android:spinnerMode="dropdown" />
 
@@ -32,9 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
-        android:background="@drawable/spinner_background"
         android:focusable="true"
-        android:gravity="left"
+        android:gravity="center_vertical|left"
         android:prompt="@string/movie_category_prompt2"
         android:spinnerMode="dropdown"
         android:visibility="invisible" />
@@ -45,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
+        android:gravity="center_vertical|left"
         android:layout_marginRight="10dp"
         android:textStyle="bold" />
 
@@ -53,7 +53,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:gravity="right"
+        android:gravity="center_vertical|right"
         android:textColor="#F0F0F0"
         android:textSize="20sp"
         tools:ignore="SelectableText" >
