--- a/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser_gridview.xml
@@ -1,65 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+<us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <us.nineworlds.serenity.widgets.DrawerLayout
-        android:id="@+id/drawer_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+    <!-- The main content view -->
 
-        <!-- The main content view -->
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
+        android:id="@+id/movieBrowserBackgroundLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/movies"
+        android:orientation="vertical"
+        android:padding="5dp" >
 
-        <RelativeLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
-            android:id="@+id/movieBrowserBackgroundLayout"
+        <com.jess.ui.TwoWayGridView
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/movieGridView"
             android:layout_width="fill_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_marginTop="?attr/actionBarSize"
-            android:background="@drawable/movies"
-            android:orientation="vertical"
-            android:padding="5dp">
+            android:layout_marginRight="10dp"
+            android:background="@color/card_background"
+            android:focusable="true"
+            android:nextFocusDown="@+id/movieGridView"
+            android:nextFocusLeft="@+id/movieGridView"
+            android:nextFocusRight="@+id/movieGridView"
+            android:padding="5dp"
+            app:cacheColorHint="#E8E8E8"
+            app:columnWidth="160dp"
+            app:gravity="center"
+            app:horizontalSpacing="16dp"
+            app:numColumns="auto_fit"
+            app:numRows="3"
+            app:rowHeight="160dp"
+            app:scrollDirectionLandscape="horizontal"
+            app:scrollDirectionPortrait="vertical"
+            app:stretchMode="spacingWidthUniform"
+            app:verticalSpacing="10dp" />
+    </RelativeLayout>
 
-            <com.jess.ui.TwoWayGridView
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:id="@+id/movieGridView"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginRight="10dp"
-                android:background="#A0000000"
-                android:focusable="true"
-                android:nextFocusDown="@+id/movieGridView"
-                android:nextFocusLeft="@+id/movieGridView"
-                android:nextFocusRight="@+id/movieGridView"
-                android:padding="5dp"
-                app:cacheColorHint="#E8E8E8"
-                app:columnWidth="160dp"
-                app:gravity="center"
-                app:horizontalSpacing="16dp"
-                app:numColumns="auto_fit"
-                app:numRows="3"
-                app:rowHeight="160dp"
-                app:scrollDirectionLandscape="horizontal"
-                app:scrollDirectionPortrait="vertical"
-                app:stretchMode="spacingWidthUniform"
-                app:verticalSpacing="10dp" />
-        </RelativeLayout>
+    <!-- The navigation drawer -->
 
-        <!-- The navigation drawer -->
+    <ListView
+        android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#111"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:focusableInTouchMode="true"
+        android:layout_marginTop="?android:attr/actionBarSize" />
 
-        <ListView
-            android:id="@+id/left_drawer"
-            android:layout_width="240dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="start"
-            android:background="#111"
-            android:choiceMode="singleChoice"
-            android:divider="@android:color/transparent"
-            android:dividerHeight="0dp"
-            android:focusableInTouchMode="true"
-            android:paddingTop="?android:attr/actionBarSize" />
-    </us.nineworlds.serenity.widgets.DrawerLayout>
-
-</merge>
+</us.nineworlds.serenity.widgets.DrawerLayout>
