--- a/serenity-app/res/layout-large/season_custom_actionbar.xml
+++ b/serenity-app/res/layout-large/season_custom_actionbar.xml
@@ -12,7 +12,7 @@
         style="@android:style/TextAppearance.Holo.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="left"
+        android:gravity="center_vertical|left"
         android:layout_marginLeft="10dp"
         android:textColor="#F0F0F0"
         tools:ignore="SelectableText" >
@@ -23,7 +23,7 @@
         style="@android:style/TextAppearance.Holo.Medium"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:gravity="right"
+        android:gravity="center_vertical|right"
         android:textColor="#F0F0F0"
         tools:ignore="SelectableText" >
     </TextView>
