--- a/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_gridview_posters.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_marginTop="@dimen/actionbarMargin"
             android:background="@color/card_background"
             android:focusable="true"
             android:nextFocusDown="@+id/tvShowGridView"
@@ -51,6 +51,6 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
         android:focusableInTouchMode="true"
-        android:paddingTop="?android:attr/actionBarSize" />
+        android:layout_marginTop="?android:attr/actionBarSize" />
 
 </us.nineworlds.serenity.widgets.DrawerLayout>
