Issue #253 - ActionBar transparency not consistent.
Fixes the styling issue on the ActionBar for the appcompat library.  Also
adjusts positing of the banner based on the action bar.  May need further
tweaks depending on version of Android being deployed too and dimensions.

--- a/serenity-app/res/layout-large/activity_movie_browser.xml
+++ b/serenity-app/res/layout-large/activity_movie_browser.xml
@@ -17,6 +17,7 @@
 
             <ImageView
                 android:id="@+id/fanArt"
+                android:background="@drawable/movies"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:scaleType="fitXY" />
@@ -26,10 +27,11 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-	            android:layout_marginTop="?attr/actionBarSize"
+	            android:layout_marginTop="60dp"
                 android:layout_marginLeft="10dp"
-                android:background="#AA000000"
-                android:padding="10dp" >
+                android:background="@color/card_background"
+                android:visibility="invisible"
+                android:padding="5dp" >
 
                 <us.nineworlds.serenity.widgets.RoundedImageView
                     android:id="@+id/video_poster"
@@ -139,7 +141,7 @@
             android:divider="@android:color/transparent"
             android:dividerHeight="0dp"
             android:focusableInTouchMode="true"
-            android:paddingTop="?android:attr/actionBarSize" />
+            android:layout_marginTop="?android:attr/actionBarSize" />
     </us.nineworlds.serenity.widgets.DrawerLayout>
 
 </merge>
