--- a/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -20,9 +20,9 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_marginTop="60dp"
             android:background="@color/card_background"
-            android:padding="10dp" >
+            android:padding="5dp" >
 
             <us.nineworlds.serenity.widgets.RoundedImageView
                 android:id="@+id/tvShowImage"
@@ -132,6 +132,6 @@
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
         android:focusableInTouchMode="true"
-        android:paddingTop="?android:attr/actionBarSize" />
+        android:layout_marginTop="?android:attr/actionBarSize" />
 
 </us.nineworlds.serenity.widgets.DrawerLayout>
