--- a/serenity-app/res/layout-xlarge/activity_movie_browser.xml
+++ b/serenity-app/res/layout-xlarge/activity_movie_browser.xml
@@ -24,92 +24,13 @@
                 android:layout_height="fill_parent"
                 android:scaleType="fitXY" />
 
-            <LinearLayout
-                android:id="@+id/metaDataRow"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
-                android:layout_marginRight="10dp"
-                android:background="#AA000000"
-                android:orientation="horizontal" >
-
-                <ImageButton
-                    android:id="@+id/menu_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="28dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@android:color/transparent"
-                    android:nextFocusDown="@+id/moviePosterGallery"
-                    android:nextFocusLeft="@+id/menu_button"
-                    android:nextFocusUp="@+id/menu_button"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="10dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/menudrawer_selector" />
-
-                <TextView
-                    android:id="@+id/movieCategoryName"
-                    style="@android:style/TextAppearance.Holo.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:focusable="false"
-                    android:text="@string/category" />
-
-                <Spinner
-                    android:id="@+id/categoryFilter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:background="@drawable/spinner_background"
-                    android:focusable="true"
-                    android:gravity="left"
-                    android:nextFocusDown="@+id/moviePosterGallery"
-                    android:nextFocusLeft="@+id/menu_button"
-                    android:nextFocusRight="@+id/categoryFilter2"
-                    android:prompt="@string/movie_category_prompt"
-                    android:spinnerMode="dropdown" />
-
-                <Spinner
-                    android:id="@+id/categoryFilter2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:background="@drawable/spinner_background"
-                    android:focusable="true"
-                    android:gravity="left"
-                    android:prompt="@string/movie_category_prompt2"
-                    android:spinnerMode="dropdown"
-                    android:visibility="invisible" />
-
-                <TextView
-                    android:id="@+id/subtitleFilter"
-                    style="@android:style/TextAppearance.Holo.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:focusable="false"
-                    android:text="Subtitle"
-                    android:visibility="gone" />
-
-                <Spinner
-                    android:id="@+id/videoSubtitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:background="@drawable/spinner_background"
-                    android:focusable="true"
-                    android:gravity="left"
-                    android:prompt="@string/movie_category_prompt2"
-                    android:spinnerMode="dropdown"
-                    android:visibility="gone" />
-            </LinearLayout>
 
             <RelativeLayout
                 android:id="@+id/video_details_container"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:layout_marginTop="60dp"
                 android:layout_marginLeft="10dp"
                 android:background="#AA000000"
                 android:padding="10dp" >
@@ -221,7 +142,7 @@
             android:divider="@android:color/transparent"
             android:dividerHeight="0dp"
             android:focusableInTouchMode="true"
-            android:paddingTop="?android:attr/actionBarSize" />
+            android:layout_marginTop="?android:attr/actionBarSize" />
     </us.nineworlds.serenity.widgets.DrawerLayout>
 
 </merge>
