--- a/serenity-app/res/layout-xlarge/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout-xlarge/activity_tvbrowser_show_banners.xml
@@ -19,75 +19,13 @@
             android:orientation="vertical"
             tools:context=".ui.browser.tv.TVShowBrowserActivity" >
 
-            <LinearLayout
-                android:id="@+id/tvLine1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#A0000000"
-                android:orientation="horizontal" >
-
-                <ImageButton
-                    android:id="@+id/menu_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="28dp"
-                    android:layout_gravity="center_vertical"
-                    android:background="@android:color/transparent"
-                    android:paddingLeft="5dp"
-                    android:paddingRight="10dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/menudrawer_selector" />
-
-                <TextView
-                    android:id="@+id/tvshow_CategoryName"
-                    style="@android:style/TextAppearance.Holo.Medium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="10dp"
-                    android:focusable="false"
-                    android:text="@string/category" />
-
-                <Spinner
-                    android:id="@+id/categoryFilter"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:background="@drawable/spinner_background"
-                    android:focusable="true"
-                    android:gravity="left"
-                    android:prompt="@string/movie_category_prompt"
-                    android:spinnerMode="dropdown" />
-
-                <Spinner
-                    android:id="@+id/categoryFilter2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:background="@drawable/spinner_background"
-                    android:focusable="true"
-                    android:gravity="left"
-                    android:prompt="@string/movie_category_prompt2"
-                    android:spinnerMode="dropdown"
-                    android:visibility="invisible" />
-
-                <TextView
-                    android:id="@+id/tvShowItemCount"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:gravity="right"
-                    android:textColor="#F0F0F0"
-                    android:textSize="20sp"
-                    tools:ignore="SelectableText" >
-                </TextView>
-            </LinearLayout>
-
             <RelativeLayout
                 android:id="@+id/video_details_container"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tvLine1"
                 android:layout_centerHorizontal="true"
-                android:background="#A0000000"
+                android:layout_marginTop="60dp"
+                android:background="@color/card_background"
                 android:padding="10dp" >
 
                 <us.nineworlds.serenity.widgets.RoundedImageView
@@ -197,7 +135,7 @@
             android:divider="@android:color/transparent"
             android:dividerHeight="0dp"
             android:focusableInTouchMode="true"
-            android:paddingTop="?android:attr/actionBarSize" />
+            android:layout_marginTop="?android:attr/actionBarSize" />
     </us.nineworlds.serenity.widgets.DrawerLayout>
 
 </merge>
