--- a/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -122,16 +122,6 @@
     </RelativeLayout>
     <!-- The navigation drawer -->
 
-    <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#111"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp"
-        android:focusableInTouchMode="true"
-        android:layout_marginTop="?android:attr/actionBarSize" />
+    <include layout="@layout/menu_drawer_with_navigation" />
 
 </us.nineworlds.serenity.widgets.DrawerLayout>
