Issue #264: FF, Pause, and REW buttons not responding to onClick events
The issue was that the dispatchKeyEvents were being swallowed.  Now
correctly passing them up the chain so they can trigger the onClick events
for the views.

--- a/serenity-app/res/layout-large/serenity_media_controller.xml
+++ b/serenity-app/res/layout-large/serenity_media_controller.xml
@@ -143,6 +143,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
             android:focusable="true"
+            android:clickable="true"
             android:nextFocusRight="@+id/mediacontroller_play_pause"
             android:nextFocusUp="@+id/mediacontroller_seekbar"
             android:scaleType="fitXY"
@@ -158,6 +159,7 @@
             style="@android:style/MediaButton.Pause"            
             android:src="@drawable/pause_selector"
             android:focusable="true"
+            android:clickable="true"
             android:nextFocusLeft="@id/osd_rewind_control"
             android:nextFocusRight="@+id/osd_ff_control"
             android:nextFocusUp="@+id/mediacontroller_seekbar"
@@ -172,6 +174,7 @@
             android:background="@android:color/transparent"
             android:src="@drawable/skipforward_selector"
             android:focusable="true"
+            android:clickable="true"
             android:nextFocusLeft="@+id/mediacontroller_play_pause"
             android:nextFocusUp="@+id/mediacontroller_seekbar"
             android:scaleType="fitXY"
