--- a/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
+++ b/serenity-app/res/layout-large/activity_tvbrowser_show_banners.xml
@@ -1,5 +1,6 @@
 <us.nineworlds.serenity.widgets.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res/us.nineworlds.serenity"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
@@ -101,20 +102,22 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_marginLeft="10dip"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dip"
             android:layout_marginBottom="5dp"
+            android:gravity="bottom"
             android:background="@color/card_background"
             android:orientation="vertical" >
 
             <us.nineworlds.serenity.widgets.SerenityGallery
                 android:id="@+id/tvShowBannerGallery"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:animationDuration="1"
-                android:padding="5dp"
-                app:spacing="10dp" >
+                android:layout_gravity="center|center_vertical">
 
                 <requestFocus />
             </us.nineworlds.serenity.widgets.SerenityGallery>
